--- a/_pgbackup/index_1544056979.html
+++ b/_pgbackup/index_1544056979.html
@@ -18,13 +18,12 @@
     <body>
         <div class="demo-btns">
             <header>
-                <header class="clearfix">front-end+ ux/ui&nbsp; test for miratech 
-                    <br>BONDARENKO YURI&nbsp;&nbsp;
-                </header>
+                <header class="clearfix">fronnt-end+ ux/ui&nbsp; test for miratech&nbsp;
+</header>
             </header>
             <div class="info">
                 <div class="buttons">
-                    <p> <a href="" data-modal="#modal" class="modal__trigger">MODAL WINDOW FOR MIRATECH</a>   </p>
+                    <p> <a href="" data-modal="#modal" class="modal__trigger">Modal 1</a>   </p>
                 </div>
             </div>
         </div>
