--- a/stylus/index.html
+++ b/stylus/index.html
@@ -5,31 +5,89 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Blueprint: Responsive Content Slider</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="description" content="Blueprint: Responsive Content Slider"/>
         <meta name="keywords" content="responsive, content, slider, jquery, css3, fluid, template"/>
         <meta name="author" content="Codrops"/>
         <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/default.css"/>
         <link rel="stylesheet" type="text/css" href="css/component.css"/>
-        <link rel="stylesheet" href="css/style.css">
         <script src="js/modernizr.custom.js"></script>
-        <link href="../responsive-modal-design/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="demo-btns">
             <header>
-                <header class="clearfix">front-end+ ux/ui&nbsp; test for miratech 
-                    <br>BONDARENKO YURI&nbsp;&nbsp;
-                </header>
+                <h1>Material Design Modals</h1>
             </header>
             <div class="info">
                 <div class="buttons">
-                    <p> <a href="" data-modal="#modal" class="modal__trigger">MODAL WINDOW FOR MIRATECH</a>   </p>
+                    <p> <a href="" data-modal="#modal" class="modal__trigger">Modal 1</a> <a href="" data-modal="#modal2" class="modal__trigger">Modal 2</a> <a href="" data-modal="#modal3" class="modal__trigger">Modal 3</a> </p>
+                </div>
+                <p>Click a button to activate a modal.<br><a href="http://ettrics.com/code/material-design-modal/" target="_blank" class="link">Read the how-to on Ettrics.com</a></p>
+            </div>
+        </div>
+        <!-- Modal -->
+        <div id="modal" class="modal modal__bg" role="dialog" aria-hidden="true">
+            <div class="modal__dialog">
+                <div class="modal__content">
+                    <p>Church-key American Apparel trust fund, cardigan mlkshk small batch Godard mustache pickled bespoke meh seitan. Wes Anderson farm-to-table vegan, kitsch Carles 8-bit gastropub paleo YOLO jean shorts health goth lo-fi. Normcore chambray locavore Banksy, YOLO meditation master cleanse readymade Bushwick.</p>
+                    <!-- modal close button -->
+                    <a href="" class="modal__close demo-close">
+                        <svg class="" viewbox="0 0 24 24">
+                            <path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/>
+                            <path d="M0 0h24v24h-24z" fill="none"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
-        <div id="modal" class="modal modal__bg" role="dialog" aria-hidden="true">
-            <div class="modal__content main">
+        <div id="modal2" class="modal modal--align-top modal__bg" role="dialog" aria-hidden="true">
+            <div class="modal__dialog">
+                <div class="modal__content">
+                    <h1>Big Modal</h1>
+                    <h3>This modal is pretty tall.</h3>
+                    <p>Selfies normcore four dollar toast four loko listicle artisan. Hoodie Marfa authentic, wayfarers church-key tofu Banksy pop-up Kickstarter Brooklyn heirloom swag synth. Echo Park cray synth mixtape. Tofu gastropub squid readymade, trust fund Wes Anderson DIY PBR 8-bit try-hard +1 Shoreditch lo-fi tote bag.</p>
+                    <p><img src="http://unsplash.it/600/300" alt=""/></p>
+                    <p>Mumblecore cred selfies fingerstache. Tousled skateboard plaid lo-fi shabby chic salvia, swag Odd Future Etsy art party Austin cronut. Crucifix whatever Pinterest food truck, pickled viral cray 90's DIY chambray keffiyeh biodiesel Vice blog. Cred meh yr tofu.</p>
+                    <p>Mumblecore cred selfies fingerstache. Tousled skateboard plaid lo-fi shabby chic salvia, swag Odd Future Etsy art party Austin cronut. Crucifix whatever Pinterest food truck, pickled viral cray 90's DIY chambray keffiyeh biodiesel Vice blog. Cred meh yr tofu.</p>
+                    <!-- modal close button -->
+                    <a href="" class="modal__close demo-close">
+                        <svg class="" viewbox="0 0 24 24">
+                            <path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/>
+                            <path d="M0 0h24v24h-24z" fill="none"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div id="modal3" class="modal modal__bg" role="dialog" aria-hidden="true">
+            <div class="modal__dialog">
+                <div>
+                    <h1>Modal 3</h1>
+                    <!-- modal close button -->
+                    <p>Church-key American Apparel trust fund, cardigan mlkshk small batch Godard mustache pickled bespoke meh seitan. Wes Anderson farm-to-table vegan, kitsch Carles 8-bit gastropub paleo YOLO jean shorts health goth lo-fi.</p>
+                    <a href="" class="modal__close demo-close">
+                        <svg class="" viewbox="0 0 24 24">
+                            <path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/>
+                            <path d="M0 0h24v24h-24z" fill="none"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- Ettrics -->
+        <a href="http://ettrics.com/code/material-design-modal/" class="logo" target="_blank">
+            <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/ettrics-logo.svg" alt=""/> 
+        </a>
+        <script src="js/index.js"></script>
+        <div class="container">
+            <header class="clearfix">fronnt-end+ ux/ui&nbsp; test for miratech&nbsp;
+                <p>Bondarenko Yuri</p>
+            </header>             
+            <div class="main">
                 <div id="cbp-contentslider" class="cbp-contentslider">
                     <ul>
                         <li id="slide5">
@@ -237,7 +295,7 @@
                         <li id="slide3">
                             <h3 class="block3icon">paycheck</h3>
                             <div>
-                                <div class="cbp-content paycheck">
+                                <div class="cbp-content paycheck 333">
                                     <svg width="236px" height="402px" viewbox="0 0 236 402" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                             <g id="modal-BANKING" transform="translate(-5.000000, -5.000000)">
@@ -256,6 +314,7 @@
                                         </div>                                         
                                         <div class="form-group"> 
                                             <input type="file" id="exampleInputFile"> 
+                                            <p class="form-text"></p> 
                                         </div>                                         
                                         <div class="form-check"> 
                                             <input class="form-check-input" type="checkbox" value="" id="exampleInputCheck1"> 
@@ -274,45 +333,7 @@
                     </nav>
                 </div>
             </div>
-            <a href="" class="modal__close demo-close">
-                <svg viewbox="0 0 24 24">
-                    <path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/>
-                    <path d="M0 0h24v24h-24z" fill="none"/>
-                </svg>
-            </a>
         </div>
-        <div id="modal2" class="modal modal--align-top modal__bg" role="dialog" aria-hidden="true">
-            <div class="modal__dialog">
-                <div class="modal__content">
-                    <h1>Big Modal</h1>
-                    <h3>This modal is pretty tall.</h3>
-                    <p>Selfies normcore four dollar toast four loko listicle artisan. Hoodie Marfa authentic, wayfarers church-key tofu Banksy pop-up Kickstarter Brooklyn heirloom swag synth. Echo Park cray synth mixtape. Tofu gastropub squid readymade, trust fund Wes Anderson DIY PBR 8-bit try-hard +1 Shoreditch lo-fi tote bag.</p>
-                    <p><img src="http://unsplash.it/600/300" alt=""/></p>
-                    <p>Mumblecore cred selfies fingerstache. Tousled skateboard plaid lo-fi shabby chic salvia, swag Odd Future Etsy art party Austin cronut. Crucifix whatever Pinterest food truck, pickled viral cray 90's DIY chambray keffiyeh biodiesel Vice blog. Cred meh yr tofu.</p>
-                    <p>Mumblecore cred selfies fingerstache. Tousled skateboard plaid lo-fi shabby chic salvia, swag Odd Future Etsy art party Austin cronut. Crucifix whatever Pinterest food truck, pickled viral cray 90's DIY chambray keffiyeh biodiesel Vice blog. Cred meh yr tofu.</p>
-                    <!-- modal close button -->
-                </div>
-            </div>
-        </div>
-        <div id="modal3" class="modal modal__bg" role="dialog" aria-hidden="true">
-            <div class="modal__dialog">
-                <div class="modal__content">
-                    <h1>Modal 3</h1>
-                    <p>Church-key American Apparel trust fund, cardigan mlkshk small batch Godard mustache pickled bespoke meh seitan. Wes Anderson farm-to-table vegan, kitsch Carles 8-bit gastropub paleo YOLO jean shorts health goth lo-fi.</p>
-                    <!-- modal close button -->
-                    <a href="" class="modal__close demo-close">
-                        <svg viewbox="0 0 24 24">
-                            <path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/>
-                            <path d="M0 0h24v24h-24z" fill="none"/>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <a href="http://ettrics.com/code/material-design-modal/" class="logo" target="_blank">
-            <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/ettrics-logo.svg" alt=""/> 
-        </a>
-        <script src="js/index.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="js/jquery.cbpContentSlider.min.js"></script>
         <script>
