--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Blueprint: Responsive Content Slider</title>
+        <title>Bondarenko</title>
         <meta name="description" content="Blueprint: Responsive Content Slider"/>
         <meta name="keywords" content="responsive, content, slider, jquery, css3, fluid, template"/>
-        <meta name="author" content="Codrops"/>
+        <meta name="author" content="yuri"/>
         <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/default.css"/>
         <link rel="stylesheet" type="text/css" href="css/component.css"/>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/modernizr.custom.js"></script>
-        <link href="../responsive-modal-design/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="demo-btns">
@@ -24,7 +23,7 @@
             </header>
             <div class="info">
                 <div class="buttons">
-                    <p> <a href="" data-modal="#modal" class="modal__trigger">MODAL WINDOW FOR MIRATECH</a>   </p>
+                    <p> <a href="" data-modal="#modal" class="modal__trigger">MODAL WINDOW FOR MIRATECH</a> </p>
                 </div>
             </div>
         </div>
