--- a/_pgbackup/index_1544061229.html
+++ b/_pgbackup/index_1544061229.html
@@ -4,25 +4,35 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Blueprint: Responsive Content Slider</title>
+        <title>Bondarenko</title>
         <meta name="description" content="Blueprint: Responsive Content Slider"/>
         <meta name="keywords" content="responsive, content, slider, jquery, css3, fluid, template"/>
-        <meta name="author" content="Codrops"/>
+        <meta name="author" content="yuri"/>
         <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/default.css"/>
         <link rel="stylesheet" type="text/css" href="css/component.css"/>
+        <link rel="stylesheet" href="css/style.css">
         <script src="js/modernizr.custom.js"></script>
     </head>
     <body>
-        <div class="container">
-            <header class="clearfix">
-                <br>
-            </header>             
-            <div class="main">
+        <div class="demo-btns">
+            <header>
+                <header class="clearfix">front-end+ ux/ui&nbsp; test for miratech 
+                    <br>BONDARENKO YURI&nbsp;&nbsp;
+                </header>
+            </header>
+            <div class="info">
+                <div class="buttons">
+                    <p> <a href="" data-modal="#modal" class="modal__trigger">MODAL WINDOW FOR MIRATECH</a> </p>
+                </div>
+            </div>
+        </div>
+        <div id="modal" class="modal modal__bg" role="dialog" aria-hidden="true">
+            <div class="modal__content main">
                 <div id="cbp-contentslider" class="cbp-contentslider">
                     <ul>
                         <li id="slide5">
-                            <h3 class="icon-platypus">personal</h3>
+                            <h3 class="header1">personal</h3>
                             <div>
                                 <div class="cbp-content">
                                     <svg width="236px" height="402px" viewbox="0 0 236 402" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -52,7 +62,7 @@
                             </div>
                         </li>
                         <li id="slide2">
-                            <h3 class="icon-rabbit">banking</h3>
+                            <h3 class="bankingheader header3">banking</h3>
                             <div>
                                 <div class="cbp-content">
                                     <svg width="236px" height="402px" viewbox="0 0 236 402" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -63,7 +73,7 @@
                                         </g>
                                     </svg>
                                     <p></p>
-                                    <svg width="379px" height="221px" viewbox="0 0 379 221" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <svg width="520px" height="221px" viewbox="0 0 379 221" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <defs>
                                             <rect id="path-1" x="0" y="0" width="359" height="58" rx="5"></rect>
                                             <filter x="-4.2%" y="-25.9%" width="108.4%" height="151.7%" filterunits="objectBoundingBox" id="filter-2">
@@ -203,17 +213,17 @@
                                             </g>
                                         </g>
                                     </svg>
-                                    <svg width="359px" height="30px" viewbox="0 0 359 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <svg width="457px" height="30px" viewbox="0 0 457 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                             <g id="modal-PAYCHECK" transform="translate(-264.000000, -295.000000)">
                                                 <g id="CTA" transform="translate(264.000000, 295.000000)">
                                                     <g>
                                                         <g id="Group-2-Copy" fill="#FFBE0B" fill-rule="nonzero">
-                                                            <path d="M5,2.16870731e-16 L30.7157085,1.33226763e-15 L354,0 C356.761424,3.13770154e-14 359,2.23857625 359,5 L359,25 C359,27.7614237 356.761424,30 354,30 L5,30 C2.23857625,30 3.38176876e-16,27.7614237 0,25 L3.03252594e-15,12.0961265 L3.41012868e-15,7.00328504 L0,5 C-1.56449537e-15,2.23857625 2.23857625,-2.15726995e-15 5,-2.66453526e-15 Z" id="Rectangle-13"></path>
+                                                            <path d="M5,1.70364535e-16 L39.100498,1.33226763e-15 L452,0 C454.761424,3.13770154e-14 457,2.23857625 457,5 L457,25 C457,27.7614237 454.761424,30 452,30 L5,30 C2.23857625,30 3.38176876e-16,27.7614237 0,25 L3.8603464e-15,12.0961265 L4.34102731e-15,7.00328504 L0,5 C-2.79081386e-15,2.23857625 2.23857625,-1.4809898e-15 5,-4.4408921e-15 Z" id="Rectangle-13"></path>
                                                         </g>
                                                         <text id="Add-Payment-Method" font-family="Helvetica" font-size="16" font-weight="normal" line-spacing="12" letter-spacing="0.150000006" fill="#181F4D">
-                                                            <tspan x="86.0832376" y="16.0546875">Add Payment Metho</tspan>
-                                                            <tspan x="233.601988" y="16.0546875">d</tspan>
+                                                            <tspan x="135.083993" y="16.0546875">Add Payment Metho</tspan>
+                                                            <tspan x="282.602744" y="16.0546875">d</tspan>
                                                         </text>
                                                     </g>
                                                 </g>
@@ -224,7 +234,7 @@
                             </div>
                         </li>
                         <li id="slide3">
-                            <h3 class="icon-aligator">paycheck</h3>
+                            <h3 class="block3icon">paycheck</h3>
                             <div>
                                 <div class="cbp-content paycheck">
                                     <svg width="236px" height="402px" viewbox="0 0 236 402" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -244,9 +254,7 @@
                                             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"> 
                                         </div>                                         
                                         <div class="form-group"> 
-                                            <label for="exampleInputFile">File input</label>                                             
                                             <input type="file" id="exampleInputFile"> 
-                                            <p class="form-text"></p> 
                                         </div>                                         
                                         <div class="form-check"> 
                                             <input class="form-check-input" type="checkbox" value="" id="exampleInputCheck1"> 
@@ -259,13 +267,51 @@
                         </li>
                     </ul>
                     <nav>
-                        <a href="#slide5" class="icon-platypus"><span>personal</span></a>
-                        <a href="#slide2" class="icon-rabbit"><span>banking</span></a>
-                        <a href="#slide3" class="icon-aligator"><span>paycheck</span></a>
+                        <a href="#slide5"><span class="personal">personal</span></a>
+                        <a href="#slide2"><span class="banking">banking</span></a>
+                        <a href="#slide3"><span class="payicon">paycheck</span></a>
                     </nav>
                 </div>
             </div>
+            <a href="" class="modal__close demo-close">
+                <svg viewbox="0 0 24 24">
+                    <path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/>
+                    <path d="M0 0h24v24h-24z" fill="none"/>
+                </svg>
+            </a>
         </div>
+        <div id="modal2" class="modal modal--align-top modal__bg" role="dialog" aria-hidden="true">
+            <div class="modal__dialog">
+                <div class="modal__content">
+                    <h1>Big Modal</h1>
+                    <h3>This modal is pretty tall.</h3>
+                    <p>Selfies normcore four dollar toast four loko listicle artisan. Hoodie Marfa authentic, wayfarers church-key tofu Banksy pop-up Kickstarter Brooklyn heirloom swag synth. Echo Park cray synth mixtape. Tofu gastropub squid readymade, trust fund Wes Anderson DIY PBR 8-bit try-hard +1 Shoreditch lo-fi tote bag.</p>
+                    <p><img src="http://unsplash.it/600/300" alt=""/></p>
+                    <p>Mumblecore cred selfies fingerstache. Tousled skateboard plaid lo-fi shabby chic salvia, swag Odd Future Etsy art party Austin cronut. Crucifix whatever Pinterest food truck, pickled viral cray 90's DIY chambray keffiyeh biodiesel Vice blog. Cred meh yr tofu.</p>
+                    <p>Mumblecore cred selfies fingerstache. Tousled skateboard plaid lo-fi shabby chic salvia, swag Odd Future Etsy art party Austin cronut. Crucifix whatever Pinterest food truck, pickled viral cray 90's DIY chambray keffiyeh biodiesel Vice blog. Cred meh yr tofu.</p>
+                    <!-- modal close button -->
+                </div>
+            </div>
+        </div>
+        <div id="modal3" class="modal modal__bg" role="dialog" aria-hidden="true">
+            <div class="modal__dialog">
+                <div class="modal__content">
+                    <h1>Modal 3</h1>
+                    <p>Church-key American Apparel trust fund, cardigan mlkshk small batch Godard mustache pickled bespoke meh seitan. Wes Anderson farm-to-table vegan, kitsch Carles 8-bit gastropub paleo YOLO jean shorts health goth lo-fi.</p>
+                    <!-- modal close button -->
+                    <a href="" class="modal__close demo-close">
+                        <svg viewbox="0 0 24 24">
+                            <path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/>
+                            <path d="M0 0h24v24h-24z" fill="none"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <a href="http://ettrics.com/code/material-design-modal/" class="logo" target="_blank">
+            <img class="logo" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/ettrics-logo.svg" alt=""/> 
+        </a>
+        <script src="js/index.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="js/jquery.cbpContentSlider.min.js"></script>
         <script>
