--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                         </g>
                                     </svg>
                                     <p></p>
-                                    <svg width="384px" height="221px" viewbox="0 0 379 221" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="pricemobile">
+                                    <svg width="384px" height="221px" viewbox="0 0 379 221" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="pricemobile price">
                                         <defs>
                                             <rect id="path-1" x="0" y="0" width="359" height="58" rx="5"></rect>
                                             <filter x="-4.2%" y="-25.9%" width="108.4%" height="151.7%" filterunits="objectBoundingBox" id="filter-2">
@@ -210,7 +210,7 @@
                                             </g>
                                         </g>
                                     </svg>
-                                    <svg width="359px" height="59px" viewbox="0 0 359 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="addpaymenntmobile">
+                                    <svg width="359px" height="59px" viewbox="0 0 359 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="addpaymenntmobile price">
                                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                             <g id="modal-PAYCHECK" transform="translate(-264.000000, -295.000000)">
                                                 <g id="CTA" transform="translate(264.000000, 295.000000)">
@@ -263,7 +263,7 @@
                             </div>
                         </li>
                     </ul>
-                    <nav>
+                    <nav class="iphone">
                         <a href="#slide5"><span class="personal icmob">personal</span></a>
                         <a href="#slide2"><span class="banking icmob">banking</span></a>
                         <a href="#slide3"><span class="payicon icmob">paycheck</span></a>
