--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <meta name="keywords" content="responsive, content, slider, jquery, css3, fluid, template"/>
         <meta name="author" content="yuri"/>
         <link rel="shortcut icon" href="../favicon.ico">
-        <link rel="stylesheet" type="text/css" href="css/default.css"/>
-        <link rel="stylesheet" type="text/css" href="css/component.css"/>
-        <link rel="stylesheet" href="css/style.css">
         <script src="js/modernizr.custom.js"></script>
+        <link href="css/default.css" rel="stylesheet" type="text/css">
+        <link href="css/component.css" rel="stylesheet" type="text/css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <p> <p>front-end&nbsp; &amp;&nbsp; ux/ui&nbsp; test <br>BONDARENKO YURI&nbsp;&nbsp;</p><a href="" data-modal="#modal" class="modal__trigger">MODAL WINDOW FOR MIRATECH</a> </p>
