--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Bondarenko</title>
-        <meta name="description" content="Blueprint: Responsive Content Slider"/>
+        <meta name="description" content="Miratech UX test"/>
         <meta name="keywords" content="responsive, content, slider, jquery, css3, fluid, template"/>
         <meta name="author" content="yuri"/>
         <link rel="shortcut icon" href="../favicon.ico">
